# sarathi-backend

./: .env.example  .gitignore  README.md  asgi.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py  ws.py
app/cache/: response_cache.py
app/core/: budget.py  config.py  i18n.py  logging.py  metrics.py
app/db/: store.py
app/eval/: golden.py  harness.py
app/graph/: build.py  pipeline.py  render.py  state.py
app/graph/nodes/: common.py  compose.py  guards.py  memory.py  output.py  retrieval.py  understanding.py  verify.py
app/guardrails/: crisis.py  safety.py
app/llm/: __init__.py  base.py  circuit.py  prompts.py  router.py  stub.py
app/llm/providers/: base.py  ollama.py  openrouter.py
app/memory/: episodic.py
app/retrieval/: book.py  corpus.py  pageindex.py
data/corpus/bhagavad_gita/: DATA_LICENSE.md  pageindex_tree.json  theme_map.json  tree_index.json  verse_pages.json  verses.json
data/corpus/bhagavad_gita/raw/: gita_seed.json
scripts/: build_pageindex.py  build_tree_index.py  check_rendering.py  ingest_gita.py  run_eval.py
tests/: conftest.py  test_crisis_exit.py  test_eval.py  test_graph.py  test_guardrails.py  test_language.py  test_memory.py  test_metrics.py  test_misapplication.py  test_out_of_scope.py  test_pageindex_rag.py  test_persona_tone.py  test_pipeline.py  test_router.py  test_verse_relevance.py
