[tool.poetry]
# Sarathi backend is a runnable app, not a distributable library — no package to build.
package-mode = false

[project]
name = "sarathi-backend"
version = "0.1.0"
description = "Sarathi — Bhagavad Gita wise-guru AI assistant (FastAPI + LangGraph backend)"
requires-python = ">=3.10,<3.13"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Web / async API (Phase 1+)
fastapi = ">=0.111"
uvicorn = {extras = ["standard"], version = ">=0.30"}
websockets = ">=12.0"

# AI orchestration (Phase 3+)
langgraph = ">=0.2"
langchain = ">=0.2"
langchain-community = ">=0.2"

# LLM providers (Phase 2+) — OpenRouter is OpenAI-API-compatible
openai = ">=1.30"
httpx = ">=0.27"
ollama = ">=0.3"

# Data / storage (Phase 1/5+)
motor = ">=3.4"            # async MongoDB
pydantic = ">=2.7"
pydantic-settings = ">=2.3"

# Observability (Phase 7)
structlog = ">=24.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"

[tool.pytest.ini_options]
# Run from backend/ — put it on sys.path so `import app...` resolves (package-mode is off,
# so Poetry doesn't install the app itself).
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
